@@ -24,7 +24,7 @@
 
 extern "C"
 {
-#include <avcodec.h>
+#include <libavcodec/avcodec.h>
 }
 
 #include <string.h>
