@@ -356,3 +356,5 @@ NOTE: I havent found time to include all of the languages, will be done in pre2
   the device, e.g. on VDR startup (Ville Skyttä)
 - Error handling improvements (Ville Skyttä)
 - Add French translation (#55, Michaël Nival)
+- Better defaults for FFmpeg and EM8300 in Makefile (#53, Ville Skyttä,
+  Michaël Nival).
